# recommendation-system-ai-service

./: .gitignore  Dockerfile.lstm  Dockerfile.svm  README.md  RERANKER.md  populate_db.fish  pyproject.toml  requirements.txt  run_debug.fish
.github/workflows/: python-ci.yml
ai_service/: __init__.py  config.py  db.py  lyrics_reader.py  ml.py  model.py  nn_definition.py  reranking.py
app/: __init__.py  config.py  db.py  lyrics_reader.py  model.py  reranking.py
app/ml/: __init__.py  lstm.py  preprocessing.py  svm.py
tests/: base.py  db_base.py  test_cli.py  test_db.py  test_endpoint.py  test_ml.py  test_model.py  test_reranking.py
tests/models/: lstm_sentiment_model.pt  svc_model.pkl  tfidf_vectorizer.pkl
